Add employee and department create endpoint
